UCL-165 Fix input fiels jumps and strange transition issue (firefox only)

--- a/src/Form/Input/Input.module.scss
+++ b/src/Form/Input/Input.module.scss
@@ -1,63 +1,36 @@
+@import '../../mixins.module.scss';
+
 .input-wrapper {
   position: relative;
   display: flex;
   align-items: center;
-  height: calc(4rem - (2 * var(--input-border-width)));
-  padding: 0 1.25rem;
-
+  height: 4rem;
   background-color: var(--input-background-color);
-  border-color: var(--input-border-color);
-  border-style: var(--input-border-style);
-  border-width: var(--input-border-width);
-  border-radius: var(--input-border-radius);
+  padding: 0 1.25rem;
   transition: all 0.2s ease-in-out;
 
-  &:hover:not(:disabled):not(.error) {
-    height: calc(4rem - (2 * var(--input-border-width)));
-    padding: 0 1.25rem;
-
-    border-color: var(--default);
-    border-width: var(--input-border-width);
-  }
-
-  &.disabled,
-  &.disabled input {
-    background-color: var(--disabled);
-    border-color: #fff;
-    cursor: not-allowed;
-  }
-
-  &.error {
-    border-color: var(--error);
-  }
-
-  &.focus {
-    height: calc(4rem - (2 * var(--input-border-width-focus)));
-    padding: 0 calc(1.25rem - var(--input-border-width));
-    border-width: var(--input-border-width-focus);
-  }
-
-  &.focus:not(.error) {
-    border-color: var(--color-primary);
-  }
+  @include outlineStates;
 }
 
 .input {
-  height: calc(4rem - (2 * var(--input-border-width)));
-  border: 0;
+  height: 4rem;
   color: var(--greyed-out);
   font-size: var(--font-size);
   font-family: var(--font-family);
   width: 100%;
   box-sizing: border-box;
-  padding: 0;
+  border: 0;
+  border-radius: var(--input-border-radius);
 
-  &:focus:not(:disabled) {
-    height: calc(4rem - (2 * var(--input-border-width-focus)));
-    outline: none;
-    border-color: var(--color-primary);
+  &:disabled {
+    background-color: var(--disabled);
+    cursor: not-allowed;
   }
+
+  @include browserOutlineDisabled;
 }
+
+@include outline;
 
 .error input {
   color: var(--error);
