--- a/src/Form/Wrapper/InputWrapper/InputWrapper.module.scss
+++ b/src/Form/Wrapper/InputWrapper/InputWrapper.module.scss
@@ -1,7 +1,5 @@
 .input-label {
-  left: calc(
-    1.25rem + 2px
-  ); // 2px is for offset of the textarea border. It's relative to the parent div which doesn't have a border.
+  left: 1.25rem;
 
   &.focus {
     color: var(--color-primary);
